--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -84,9 +84,9 @@
   <%= will_paginate %>
 </div>
 
-<script type="text/javascript">
-  function file_selected(file_field){
-    var filename = $(file_field)[0].files[0].name;
-    $('#filename').val(filename);
-  }
-</script>
+<!--<script type="text/javascript">-->
+<!--  function file_selected(file_field){-->
+<!--    var filename = $(file_field)[0].files[0].name;-->
+<!--    $('#filename').val(filename);-->
+<!--  }-->
+<!--</script>-->
